--- a/EcomLocatorV2.Android/EcomLocatorV2.Android.csproj
+++ b/EcomLocatorV2.Android/EcomLocatorV2.Android.csproj
@@ -114,5 +114,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\HeaderBackground.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\unicornIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xhdpi\unicornIcon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
