--- a/EcomLocatorV2.Android/EcomLocatorV2.Android.csproj
+++ b/EcomLocatorV2.Android/EcomLocatorV2.Android.csproj
@@ -135,5 +135,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\mipmap-xxxhdpi\unicornIcon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\background2.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
