--- a/UnitTestEcomProject/packages.config
+++ b/UnitTestEcomProject/packages.config
@@ -5,6 +5,7 @@
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net472" />
   <package id="NUnit" version="3.12.0" targetFramework="net472" />
+  <package id="NUnit3TestAdapter" version="3.15.1" targetFramework="net472" />
   <package id="Prism.Core" version="7.2.0.1367" targetFramework="net472" />
   <package id="Prism.Forms" version="7.2.0.1367" targetFramework="net472" />
   <package id="Prism.Unity.Forms" version="7.2.0.1367" targetFramework="net472" />
